[gd_scene load_steps=28 format=3 uid="uid://bxft8i6fmnxwt"]

[ext_resource type="Script" path="res://escenas/Jugador/Script/player.gd" id="1_pqjor"]
[ext_resource type="Texture2D" uid="uid://cb5ijlr5ik5qx" path="res://escenas/Jugador/protagonista.png" id="2_erqnv"]
[ext_resource type="Script" path="res://escenas/Jugador/Script/hitbox_player.gd" id="3_ku6t7"]
[ext_resource type="Script" path="res://escenas/Jugador/Script/health_player.gd" id="4_csamu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqdox"]
size = Vector2(28, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkjij"]
atlas = ExtResource("2_erqnv")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3cb6"]
atlas = ExtResource("2_erqnv")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtcf"]
atlas = ExtResource("2_erqnv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo3q4"]
atlas = ExtResource("2_erqnv")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u15j6"]
atlas = ExtResource("2_erqnv")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pfly"]
atlas = ExtResource("2_erqnv")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5trej"]
atlas = ExtResource("2_erqnv")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8su"]
atlas = ExtResource("2_erqnv")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bveb1"]
atlas = ExtResource("2_erqnv")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiq2m"]
atlas = ExtResource("2_erqnv")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx51i"]
atlas = ExtResource("2_erqnv")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6jr8"]
atlas = ExtResource("2_erqnv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovew3"]
atlas = ExtResource("2_erqnv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgwke"]
atlas = ExtResource("2_erqnv")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wu8n"]
atlas = ExtResource("2_erqnv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nii1l"]
atlas = ExtResource("2_erqnv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn5xy"]
atlas = ExtResource("2_erqnv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04tl6"]
atlas = ExtResource("2_erqnv")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nqo3"]
atlas = ExtResource("2_erqnv")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gefil"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkjij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkjij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3cb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo3q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u15j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pfly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5trej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8su")
}],
"loop": true,
"name": &"Attack",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bveb1")
}],
"loop": true,
"name": &"Die",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiq2m")
}],
"loop": true,
"name": &"Die_No_Sword",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx51i")
}],
"loop": true,
"name": &"Down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6jr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovew3")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgwke")
}],
"loop": true,
"name": &"Jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wu8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nii1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn5xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nii1l")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04tl6")
}],
"loop": true,
"name": &"cry",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nqo3")
}],
"loop": true,
"name": &"espada",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gp02"]
radius = 22.0227

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ibrq8"]
radius = 12.0
height = 48.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(118, 67)
wall_min_slide_angle = 2.44346
script = ExtResource("1_pqjor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_oqdox")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_gefil")
animation = &"Attack"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"slice": "",
"source": "res://assets/personajes/protagonista.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "3ce3d15948cc28d0d4f16b75629b5c8a"
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true
}

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_ku6t7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(14, 4)
shape = SubResource("CircleShape2D_5gp02")
disabled = true

[node name="HealthComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_csamu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("CapsuleShape2D_ibrq8")

[connection signal="onDamageTook" from="HealthComponent" to="." method="_on_health_component_on_damage_took"]
[connection signal="onDead" from="HealthComponent" to="." method="_on_health_component_on_dead"]
